# MONCOMBLE_OS

./: Cargo.toml  README.md  Rapport MONCOMBLE_OS - Jules MONCOMBLE 4SI4.docx  boot1.asm  boot2.asm  build.sh  build_full.sh  build_partitionless.sh  config.toml  floppy.img  i686-none.json  linker.ld
src/: main.rs
src/memory/: mod.rs  slab_allocator.rs
