[package]
name = "MONCOMBLE_OS"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.dev.package.MONCOMBLE_OS]
# On passe nos link-args pour dev
link-arg = ["-nostartfiles", "-nostdlib"]

[profile.release]
panic = "abort"

[profile.release.package.MONCOMBLE_OS]
# Pour release, pareil
link-arg = ["-nostartfiles", "-nostdlib"]

[unstable]
build-std = ["core", "compiler_builtins"]

[[bin]]
name = "MONCOMBLE_OS"
