[package]
name = "MONCOMBLE_OS"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.dev.package.MONCOMBLE_OS]
link-arg = ["-nostartfiles", "-nostdlib"]

[profile.release]
panic = "abort"

[profile.release.package.MONCOMBLE_OS]
link-arg = ["-nostartfiles", "-nostdlib"]

[[bin]]
name = "MONCOMBLE_OS"

[unstable]
build-std = ["core", "compiler_builtins"]

